--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+:root {
+    --body-background-color: rgb(247, 247, 247);
+    --text-color: black;
+    --button-color: black;
+    --button-text-color: white;
+}
+
 body {
     margin: 0;
     font-family: "Montserrat", sans-serif;
     font-weight: 100;
-    height: 100vh;
-    background-color: #f0f0f0;
+    height: 100dvh;
+    /* background: linear-gradient(300deg, #6a6f74, #3285bd, deepskyblue); */
+    /* background-size: 180% 180%; */
+    animation: gradient-animation 18s ease infinite;
+    height: 100dvh;
+    color: var(--text-color);
+    background-color: var(--body-background-color);
 }
 
 .main-container {
@@ -18,29 +30,27 @@ body {
     margin-bottom: 2rem;
 }
 
-.main-content {
-    /* width: 90%; */
-    margin: 0 0 0 5rem;
-}
-
-.main-content>h1 {
+.main-container>h1 {
     font-size: 2rem;
     font-weight: 600;
     margin-bottom: 1rem;
     text-align: center;
+    color: var(--text-color);
 }
 
-.main-content>h2 {
+.main-container>h2 {
     font-size: 1.5rem;
     font-weight: 400;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
-.main-content>h3 {
+.main-container>h3 {
     font-size: 1rem;
     font-weight: 400;
     font-style: italic;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .category-container {
@@ -61,7 +71,6 @@ body {
 }
 
 .category-container>a {
-    background-color: rebeccapurple;
     border-radius: 20px;
     width: 25rem;
     height: 15rem;
@@ -71,9 +80,10 @@ body {
     text-align: center;
     margin-top: 2rem;
     text-transform: uppercase;
-    color: #000;
+    color: var(--text-color);
     font-size: 1.2rem;
     font-weight: 600;
+    animation: float 3s ease-in-out infinite;
 }
 
 .category-container>a>img {
@@ -113,9 +123,10 @@ body {
     box-shadow: rgba(0, 0, 0, 0.45) 0px 17px 20px -8px;
     min-height: 100px;
     line-height: 5.5rem;
-    color: black;
+    color: var(--text-color);
     font-weight: 600;
     cursor: pointer;
+    animation: float 3s ease-in-out infinite;
 }
 
 .brand-item:hover,
@@ -136,14 +147,17 @@ body {
 
 .footer {
     height: 10rem;
-    /* border-top: 1px solid #00000093; */
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 .footer-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    color: var(--text-color);
 }
 
 .footer-left {
@@ -162,14 +176,13 @@ body {
 }
 
 .footer-content button {
-    background-color: black;
-    color: white;
+    background-color: var(--button-color);
+    color: var(--button-text-color);
     border: none;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.5rem;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1.1rem;
-    text-transform: uppercase;
+    font-size: 1rem;
 }
 
 .help-grey-card-modal {
@@ -179,9 +192,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
 }
 
 .help-grey-card-modal-content {
@@ -189,4 +200,34 @@ body {
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+/* Animation */
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-5px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
