--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ img {
     height: auto;
 }
 
+.main-content {
+    margin-top: 2rem;
+}
+
 .main-header {
     display: flex;
     text-align: center;
@@ -136,8 +140,7 @@ img {
 
 .brand-item,
 .subcategory-item,
-.circulation-date-item,
-.product-type-item {
+.circulation-date-item {
     background-color: white;
     text-decoration: none;
     border-radius: 8px;
@@ -261,6 +264,56 @@ img {
     width: 3rem;
     height: 3rem;
 }
+
+/* Product Type */
+
+.product-type-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+/* Product Spec */
+
+.product-spec-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.product-spec-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.product-spec-button {
+    background-color: transparent;
+    /* border: none; */
+    cursor: pointer;
+    border: 1px solid var(--text-color);
+    border-radius: 1rem;
+    padding: 0.5rem 1rem;
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-weight: 600;
+    text-align: center;
+}
+
+.product-spec-button:hover {
+    background-color: var(--button-color);
+    color: var(--button-text-color);
+}
+
+.product-spec-image {
+    width: 30%;
+    height: 100%;
+    object-fit: cover;
+    min-width: 500px;
+}
+
 
 /* Animation */
 
