--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,9 +138,19 @@ img {
     margin: 0 auto;
 }
 
+.product-type-grid {
+    display: grid;
+    grid-template-columns: 20rem 20rem 20rem;
+    gap: 3rem;
+    margin-top: 5rem;
+    justify-items: center;
+    justify-content: center;
+}
+
 .brand-item,
 .subcategory-item,
-.circulation-date-item {
+.circulation-date-item,
+.product-type-item {
     background-color: white;
     text-decoration: none;
     border-radius: 8px;
@@ -313,7 +323,6 @@ img {
     object-fit: cover;
     min-width: 500px;
 }
-
 
 /* Animation */
 
