--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ img {
 
 .footer {
     height: 10rem;
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
 }
 
 .footer-content {
